--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<button id="black-material">Black</button>
 			<button id="red-material">Red</button> -->
 			<div class="column">
-				<!-- <button onclick="instantiateWasm()">Instantiate .wasm</button> -->
+				<button onclick="instantiateWasm()">Instantiate .wasm</button>
 				<button onclick="resetSimulation()">reset simulation</button>
 			</div>
 			<div class="column">
@@ -91,7 +91,7 @@
 		<script src="js/loaders/AssimpJSONLoader.js"></script>
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
-		<script src="mainController.js"></script>
+		<!-- <script src="mainController.js"></script> -->
 		<script src="zone2coord.js"></script>
 
 		<script src="simulator-ts/libs/require.js"></script>
@@ -1153,7 +1153,7 @@
 			zone = jsonSimulationConf.car.end;
 			console.log("X : ", zone2Coord.get(zone)[0]," Y : ", zone2Coord.get(zone)[1]);
 
-			}, 3000);
+			}, 30000);
 
 			// Read the file with configuration
 			function readJSONFile(file)
