--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h2>This page is still under construction. But it will be improved every week</h2>
 		<a href="selfdrivingcar">Self-Drving-Car-Demo</a><br>
+		<a href="selfdrivingcar/ideIntegration.html">Self-Drving-Car-IDE</a><br>
 		<a href="pacman">Pac-Man</a>
 	</body>
 </html>
