Added passing a velocity to the controller

--- a/index.html
+++ b/index.html
@@ -1225,6 +1225,7 @@
 				Module.setY(simulator.output.yi.value);
 
 				Module.setTime(simulator.output.ti.value);
+				Module.setVelocity(simulator.output.velocity.value);
 
 				// Execute model and calculate controller output
 				Module.execute();
