--- a/index.html
+++ b/index.html
@@ -1258,6 +1258,9 @@
 					console.log("Get distances + set Module + execute + log : ",Math.floor(Date.now()) - startTime);
 				}
 
+				// execute in the parent window the function which pass data to trajectoryComparatorMain
+				parent.getSimulationLog();
+
 				showTime(simulator.output.ti);
 
 				logObject.telemetry.push({
