--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
 				document.getElementById("notready").style.display = 'none';
 				document.getElementById("ready").style.display = 'block';
 			}
+
+			function notReadyToGo(){
+				document.getElementById("ready").style.display = 'none';
+				document.getElementById("notready").style.display = 'block';
+			}
+			
 		</script>
 		
 		<script>
