Added cones to the track, get rid of cars, changed the camera position, decreased the number of standing buildings to 2

--- a/ideIntegration.html
+++ b/ideIntegration.html
@@ -25,7 +25,7 @@
                 </div>
         </div>
         <div id="rightSide2" class="column" style="display: none">
-            // Change the way of defining the current tutorial link
+            <!-- Change the way of defining the current tutorial link -->
             <iframe id="indexSimulator" src="tutorialText/html/tutorial03.md.html"  height="900" width="686" frameborder="0"></iframe>        
         </div>
     </div>
